[tool.poetry]
name = "unpacked"
version = "0.1.0"
description = ""
authors = ["DrgnFireYellow <ethanmilbert@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.9"
requests = "^2.30.0"


[tool.poetry.group.dev.dependencies]
black = "^23.3.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
